--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -17,7 +17,12 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/AlfaranoAndrea/pytorch-segmentation"
+        "!git clone https://github.com/AlfaranoAndrea/pytorch-segmentation\n",
+        "\n",
+        "%cd pytorch-segmentation\n",
+        "!mkdir -p ./data/cityscapes/leftImg8bit_trainvaltest\n",
+        "!mkdir -p ./data/cityscapes/gtFine_trainvaltest\n",
+        "%cd data"
       ],
       "metadata": {
         "colab": {
@@ -26,7 +31,7 @@
         "id": "bByo8uLBC9PG",
         "outputId": "894379bf-1cc9-425b-a805-1a551455423e"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -44,36 +49,22 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "%cd pytorch-segmentation\n",
-        "!mkdir -p ./data/cityscapes/leftImg8bit_trainvaltest\n",
-        "!mkdir -p ./data/cityscapes/gtFine_trainvaltest\n",
-        "%cd data"
+        "### Sign in to the dataset site [link](https://www.cityscapes-dataset.com/login/).\n",
+        "On the successive cell modify the first row changing USERNAME and PASSWORD with your actual cityscapes username and password\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "TfOVZpxHDIzp",
-        "outputId": "4a2b14b5-0a6b-4200-d5c1-8f45074a1f36"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/pytorch-segmentation\n",
-            "/content/pytorch-segmentation/data\n"
-          ]
-        }
-      ]
+        "id": "2UWsN3kLaglx"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "!wget --keep-session-cookies --save-cookies=cookies.txt --post-data 'username=scambret&password=Abello1-&submit=Login' https://www.cityscapes-dataset.com/login/\n",
+        "#modify -->\n",
+        "!wget --keep-session-cookies --save-cookies=cookies.txt --post-data 'username=USERNAME&password=PASSWORD-&submit=Login' https://www.cityscapes-dataset.com/login/\n",
+        "#<-- modify\n",
+        "\n",
         "!wget --load-cookies cookies.txt --content-disposition https://www.cityscapes-dataset.com/file-handling/?packageID=1\n",
         "!wget --load-cookies cookies.txt --content-disposition https://www.cityscapes-dataset.com/file-handling/?packageID=3\n"
       ],
@@ -84,7 +75,7 @@
         "id": "kEufh0mUaqHX",
         "outputId": "22b29964-9443-4374-d88c-fcd2d37a30e3"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +138,7 @@
         "id": "7kUeVKbGRIYV",
         "outputId": "304cd4cb-0102-483c-9e24-9ed402425bd4"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5428,15 +5419,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "oezuoNusu-nK"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
